// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RadioGroup > Snapshots > should render additional classes 1`] = `
<div>
  <div
    class="_radio__group_ec96d8 _radio__group--horizontal_ec96d8 other-class"
  >
    <label
      class="_radio_ec96d8 _radio--primary_ec96d8 _radio--md_ec96d8 other-class"
    >
      <input
        class="_radio__input_ec96d8"
        name="name"
        type="radio"
      />
      <span
        class="_radio__control_ec96d8"
      />
      <div
        class="_radio__text_ec96d8"
      >
        Radio
      </div>
    </label>
  </div>
</div>
`;

exports[`RadioGroup > Snapshots > should renders default component 1`] = `
<div>
  <div
    class="_radio__group_ec96d8 _radio__group--horizontal_ec96d8"
  >
    <label
      class="_radio_ec96d8 _radio--primary_ec96d8 _radio--md_ec96d8"
    >
      <input
        class="_radio__input_ec96d8"
        name="name"
        type="radio"
      />
      <span
        class="_radio__control_ec96d8"
      />
      <div
        class="_radio__text_ec96d8"
      >
        Radio
      </div>
    </label>
  </div>
</div>
`;
